# resource_management

./: .gitignore  CMakeLists.txt  README.md
include/: resource_api.h  resource_indexer.h  resource_node.h  resource_registry.h
src/: main.cpp  resource_indexer.cpp  resource_node.cpp  resource_registry.cpp
test/: test_Indexed.cpp  test_ResourceIndexer.cpp  test_ResourceNode.cpp  test_ResourceRegistry.cpp  test_struct.cpp
